force-app/main/default/objects/SR_Lead_Call__c.object
<CustomObject>
    <description>This object is used to capture call information by Student Recruitment during their outbound call campaign</description>
    <fields>
        <fullName>Call_Name__c</fullName>
        <description>Link to Lead or Contact</description>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	HYPERLINK(&quot;/&quot; + Lead__c,  Lead__r.FirstName&amp;&quot; &quot;&amp;  Lead__r.LastName, &quot;_blank&quot;),

	IF( NOT( ISBLANK( Contact__c )),
		HYPERLINK(&quot;/&quot; + Contact__c,  Contact__r.FirstName&amp;&quot; &quot;&amp;  Contact__r.LastName, &quot;_blank&quot;),
		&quot;No Lead/Contact&quot;
	)
)</formula>
        <label>Call Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#78C953</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No-No Answer</fullName>
                    <color>#AFCADF</color>
                    <label>No-No Answer</label>
                </value>
                <value>
                    <fullName>No-Not Available</fullName>
                    <color>#2F5D85</color>
                    <label>No-Not Available</label>
                </value>
                <value>
                    <fullName>No-Wrong Number</fullName>
                    <color>#0B24BE</color>
                    <label>No-Wrong Number</label>
                </value>
                <value>
                    <fullName>No-Not Applicable</fullName>
                    <color>#0B6FCE</color>
                    <label>No-Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#A53711</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#419249</color>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT( Campaign__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SR Lead Calls</relationshipLabel>
        <relationshipName>SR_Call_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )),  TEXT( Contact__r.Campus__c )  ,
IF( NOT( ISBLANK( Lead__c )),    Lead__r.Campus__c,
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Time_For__c</fullName>
        <description>IF(
	NOT( ISBLANK( Lead__r.City )),
	HYPERLINK(&quot;https://www.timeanddate.com/worldclock/?query=&quot; &amp; Lead__r.City, Lead__r.City),

IF(
	AND(
		ISBLANK( Lead__r.City ),
		NOT( ISBLANK( Lead__r.Country ))
	),
	HYPERLINK(&quot;https://www.timeanddate.com/worldclock/?query=&quot; &amp; Lead__r.Country, Lead__r.Country),
	NULL
))</description>
        <formula>IF(
	NOT( ISBLANK( Country__c )),

	HYPERLINK(&quot;https://www.google.com.au/search?q=time+&quot; &amp; Country__c, Country__c),
	HYPERLINK(&quot;https://www.google.com.au/search?q=time+Australia&quot;, &apos;Australia&apos;)
)</formula>
        <label>Check Time For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Course_Name__c</fullName>
        <label>Competitor Course Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name_Other__c</fullName>
        <label>Competitor Name Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Competitor_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ANU</fullName>
                </value>
                <value>
                    <fullName>ANU College</fullName>
                </value>
                <value>
                    <fullName>Australian Catholic University</fullName>
                </value>
                <value>
                    <fullName>Bond University</fullName>
                </value>
                <value>
                    <fullName>Bradford College</fullName>
                </value>
                <value>
                    <fullName>Charles Darwin University</fullName>
                </value>
                <value>
                    <fullName>Charles Sturt University</fullName>
                </value>
                <value>
                    <fullName>CQU</fullName>
                </value>
                <value>
                    <fullName>Curtin College</fullName>
                </value>
                <value>
                    <fullName>Curtin University of Technology</fullName>
                </value>
                <value>
                    <fullName>Deakin College</fullName>
                </value>
                <value>
                    <fullName>Deakin University</fullName>
                </value>
                <value>
                    <fullName>Edith Cowan University</fullName>
                </value>
                <value>
                    <fullName>Eynesbury</fullName>
                </value>
                <value>
                    <fullName>Federation University</fullName>
                </value>
                <value>
                    <fullName>Flinders University</fullName>
                </value>
                <value>
                    <fullName>Griffith University</fullName>
                </value>
                <value>
                    <fullName>Holmesglen TAFE</fullName>
                </value>
                <value>
                    <fullName>Holmes Institute</fullName>
                </value>
                <value>
                    <fullName>IES</fullName>
                </value>
                <value>
                    <fullName>James Cook University</fullName>
                </value>
                <value>
                    <fullName>La Trobe College</fullName>
                </value>
                <value>
                    <fullName>Latrobe University</fullName>
                </value>
                <value>
                    <fullName>Macquarie University</fullName>
                </value>
                <value>
                    <fullName>Melbourne University</fullName>
                </value>
                <value>
                    <fullName>Murdoch University</fullName>
                </value>
                <value>
                    <fullName>Newcastle College</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
                <value>
                    <fullName>QIBT</fullName>
                </value>
                <value>
                    <fullName>Queensland University of Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Reason__c</fullName>
        <label>Competitor Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_for_Decision__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prefers course (perceived more prestigious)</fullName>
                </value>
                <value>
                    <fullName>Prefers course (better credit exemptions)</fullName>
                </value>
                <value>
                    <fullName>Prefers course (offers work experience/internships)</fullName>
                </value>
                <value>
                    <fullName>Prefers course (Mid-year intake available)</fullName>
                </value>
                <value>
                    <fullName>Prefers course (Intake commencement at more suitable time)</fullName>
                </value>
                <value>
                    <fullName>Prefers shorter course duration</fullName>
                </value>
                <value>
                    <fullName>Prefers competitor course (course not offered)</fullName>
                </value>
                <value>
                    <fullName>Prefers competitor course</fullName>
                </value>
                <value>
                    <fullName>Entry requirements met for direct entry to university</fullName>
                </value>
                <value>
                    <fullName>Family/friends studying there</fullName>
                </value>
                <value>
                    <fullName>Prefers location</fullName>
                </value>
                <value>
                    <fullName>Scholarship offered</fullName>
                </value>
                <value>
                    <fullName>Offered CSP offer</fullName>
                </value>
                <value>
                    <fullName>Undisclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SR Lead Calls</relationshipLabel>
        <relationshipName>SR_Lead_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	Lead__r.Country,

	IF( NOT( ISBLANK( Contact__c )),
		TEXT( Contact__r.Country_of_Residence__c ),
		NULL
	)
)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Study_Area__c</fullName>
        <formula>Lead__r.Course_Study_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course/Study Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )), NULL,
IF( NOT( ISBLANK( Lead__c )),    Lead__r.Date_of_Birth__c  ,
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Will Apply</fullName>
                    <color>#419249</color>
                    <label>Will Apply</label>
                </value>
                <value>
                    <fullName>Will Not Apply</fullName>
                    <color>#A53711</color>
                    <label>Will Not Apply</label>
                </value>
                <value>
                    <fullName>Accept Offer</fullName>
                    <color>#419249</color>
                    <label>Accept Offer</label>
                </value>
                <value>
                    <fullName>Defer Offer</fullName>
                    <color>#F96FB7</color>
                    <label>Defer Offer</label>
                </value>
                <value>
                    <fullName>Decline Offer</fullName>
                    <color>#A53711</color>
                    <label>Decline Offer</label>
                </value>
                <value>
                    <fullName>Still Deciding</fullName>
                    <color>#0B24BE</color>
                    <label>Still Deciding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )),  Contact__r.Email  ,
IF( NOT( ISBLANK( Lead__c )),    Lead__r.Email ,
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	TEXT( Lead__r.Faculty__c ),

	IF( NOT( ISBLANK( Contact__c )),
		TEXT( Contact__r.Faculty__c ),
		NULL
	)
)</formula>
        <label>Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )), Contact__r.First_Name_case_corrected__c &amp; &quot; &quot; &amp; Contact__r.Last_Name_case_corrected__c,
IF( NOT( ISBLANK( Lead__c )),  Lead__r.FirstName  &amp; &quot; &quot; &amp; Lead__r.LastName,
NULL))</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Feedback__c</fullName>
        <label>Key Feedback</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SR_Call_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	Lead__r.MobilePhone,

	IF( NOT( ISBLANK( Contact__c )),
		Contact__r.MobilePhone,
		NULL
	)
)</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )),  Contact__r.OtherPhone ,
IF( NOT( ISBLANK( Lead__c )),     Lead__r.Other_Phone__c  ,
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>IF( NOT( ISBLANK( Owner:Queue.QueueName )),
	Owner:Queue.QueueName,
	Owner:User.FirstName &amp; &quot; &quot;&amp;  Owner:User.LastName 
)</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )),

	IF( Contact__r.RecordType.DeveloperName = &apos;Student&apos;, 

		Contact__r.Person_ID_unique__c, 
		NULL 
	),

	IF( NOT( ISBLANK( Lead__c )),  
		
		IF( LEN( Lead__r.Person_ID__c ) &lt;= 10, 

			Lead__r.Person_ID__c, 
			NULL
		), 
		NULL
	)
)</formula>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	Lead__r.Phone,

	IF( NOT( ISBLANK( Contact__c )),
		Contact__r.Phone,
		NULL
	)
)</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9am to 10am</fullName>
                </value>
                <value>
                    <fullName>10am to 11am</fullName>
                </value>
                <value>
                    <fullName>11am to 12pm</fullName>
                </value>
                <value>
                    <fullName>12pm to 1pm</fullName>
                </value>
                <value>
                    <fullName>1pm to 2pm</fullName>
                </value>
                <value>
                    <fullName>2pm to 3pm</fullName>
                </value>
                <value>
                    <fullName>3pm to 4pm</fullName>
                </value>
                <value>
                    <fullName>4pm to 5pm</fullName>
                </value>
                <value>
                    <fullName>5pm to 6pm</fullName>
                </value>
                <value>
                    <fullName>6pm to 7pm</fullName>
                </value>
                <value>
                    <fullName>7pm to 8pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Country_of_Study__c</fullName>
        <label>Preferred Country of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Decision__c</fullName>
        <label>Reason for Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Decision__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted another Monash course</fullName>
                </value>
                <value>
                    <fullName>Accepted offer at another Institution</fullName>
                </value>
                <value>
                    <fullName>Already deferred</fullName>
                </value>
                <value>
                    <fullName>Applying/applied at Competitor</fullName>
                </value>
                <value>
                    <fullName>Applying/applied for another Monash course</fullName>
                </value>
                <value>
                    <fullName>Could not meet condition</fullName>
                </value>
                <value>
                    <fullName>Course not offered</fullName>
                </value>
                <value>
                    <fullName>Doesn’t meet entry requirements</fullName>
                </value>
                <value>
                    <fullName>Family/ Personal Reasons</fullName>
                </value>
                <value>
                    <fullName>Family obligations</fullName>
                </value>
                <value>
                    <fullName>Financial Problem</fullName>
                </value>
                <value>
                    <fullName>Financial reasons</fullName>
                </value>
                <value>
                    <fullName>Has already Accepted/Enrolled</fullName>
                </value>
                <value>
                    <fullName>Has already applied</fullName>
                </value>
                <value>
                    <fullName>Is planning to apply</fullName>
                </value>
                <value>
                    <fullName>No longer interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Travel/gap year</fullName>
                </value>
                <value>
                    <fullName>Visa Issues</fullName>
                </value>
                <value>
                    <fullName>Will Accept/Enrol</fullName>
                </value>
                <value>
                    <fullName>Will defer</fullName>
                </value>
                <value>
                    <fullName>Work Obligations</fullName>
                </value>
                <value>
                    <fullName>Will Accept Enrol-Waiting on R2 offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Lead__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Level__c</fullName>
        <formula>IF( NOT( ISBLANK( Lead__c )),
	TEXT( Lead__r.Study_Level__c ),

	IF( NOT( ISBLANK( Contact__c )),
		TEXT( Lead__r.Study_Level__c ),
		NULL
	)
)</formula>
        <label>Study Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Course_Code__c</fullName>
        <formula>Lead__r.Course_Code__c</formula>
        <label>VTAC Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Course_Title__c</fullName>
        <formula>Lead__r.Course_Study_Area__c</formula>
        <label>VTAC Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Faculty__c</fullName>
        <formula>TEXT(Lead__r.Faculty__c)</formula>
        <label>VTAC Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_ID__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__c )), Contact__r.VTAC_Id__c,
IF( NOT( ISBLANK( Lead__c )),  Lead__r.VTAC_ID__c,
NULL))</formula>
        <label>VTAC ID</label>
        <type>Text</type>
    </fields>
    <label>SR Lead Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_Name__c</columns>
        <columns>Call_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Call_Status__c</columns>
        <columns>Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Call_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Call_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>Campaign__c</columns>
        <columns>Call_Status__c</columns>
        <columns>NAME</columns>
        <columns>Owner_Name__c</columns>
        <columns>Call_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Date_of_Birth__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Call_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Calls</fullName>
        <columns>NAME</columns>
        <columns>Call_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Call_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Call_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Closed Calls</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Calls</fullName>
        <columns>Campaign__c</columns>
        <columns>Call_Name__c</columns>
        <columns>Call_Status__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Call_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open Calls</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Lead_Calls</fullName>
        <columns>Campaign__c</columns>
        <columns>Call_Status__c</columns>
        <columns>NAME</columns>
        <columns>Call_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Mobile__c</columns>
        <columns>Faculty__c</columns>
        <columns>Study_Level__c</columns>
        <columns>Course_Study_Area__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>Call_Result__c</columns>
        <columns>Date_of_Birth__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>Round Dec VTAC Offers UG Domestic S1 2020</value>
        </filters>
        <label>Unassigned Lead Calls</label>
        <queue>Student_Rec_Leads</queue>
    </listViews>
    <nameField>
        <displayFormat>SRLC-{000000}</displayFormat>
        <label>SR Lead Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Lead Calls</pluralLabel>
    <recordTypes>
        <fullName>Domestic_Post_App</fullName>
        <active>true</active>
        <label>Domestic Post App</label>
    </recordTypes>
    <recordTypes>
        <fullName>Domestic_Pre_App</fullName>
        <active>true</active>
        <label>Domestic Pre App</label>
    </recordTypes>
    <recordTypes>
        <fullName>International_Post_App</fullName>
        <active>true</active>
        <label>International Post App</label>
    </recordTypes>
    <recordTypes>
        <fullName>International_Pre_App</fullName>
        <active>true</active>
        <label>International Pre App</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Competitor_Name_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	OR(
		ISPICKVAL( Reason_for_Decision__c , &apos;Applying/applied at Competitor&apos;), 
		ISPICKVAL( Reason_for_Decision__c , &apos;Accepted offer at another Institution&apos;)
	),

	ISPICKVAL(  Competitor_Name__c  , &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Competitor_Name__c</errorDisplayField>
        <errorMessage>Please provide Competitor Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_Reason_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	OR(
		ISPICKVAL( Reason_for_Decision__c , &apos;Applying/applied at Competitor&apos;), 
		ISPICKVAL( Reason_for_Decision__c , &apos;Accepted offer at another Institution&apos;)
	),

	ISPICKVAL( Competitor_Reason__c , &apos;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Competitor_Reason__c</errorDisplayField>
        <errorMessage>Please provide Competitor Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Decision_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	ISPICKVAL(Call_Result__c, &apos;Yes&apos;), 
	ISBLANK( TEXT( Decision__c ))
)</errorConditionFormula>
        <errorDisplayField>Decision__c</errorDisplayField>
        <errorMessage>Please provide Decision</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provide_Competitor_Name</fullName>
        <active>true</active>
        <description>IF the agent logging the call selects competitor name as overseas university or other, the system will prompt them to provide the name</description>
        <errorConditionFormula>AND(
	OR(
   		ISPICKVAL( Competitor_Name__c, &apos;Overseas University&apos; ),
   		ISPICKVAL( Competitor_Name__c, &apos;Other&apos; )
	),

	ISBLANK( Competitor_Name_Other__c )
)</errorConditionFormula>
        <errorDisplayField>Competitor_Name_Other__c</errorDisplayField>
        <errorMessage>Please provide the competitor name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Decision_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	ISPICKVAL( Call_Result__c, &apos;Yes&apos; ), 
	NOT( ISPICKVAL (Decision__c, &apos;Still Deciding&apos; )), 
	ISBLANK( TEXT( Reason_for_Decision__c )) 
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Decision__c</errorDisplayField>
        <errorMessage>Please provide Reason for Decision</errorMessage>
    </validationRules>
</CustomObject>